--- a/src/components/style/mixins.less
+++ b/src/components/style/mixins.less
@@ -3,3 +3,17 @@
   justify-content: center;
   align-items: center;
 }
+
+.mask-style() {
+  .absolute-fill;
+  background-color: #000000;
+  opacity: 0.5;
+}
+
+.absolute-fill() {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
