feat: complete the radio component

--- a/src/components/style/var.less
+++ b/src/components/style/var.less
@@ -2,47 +2,47 @@
 
 // 颜色
 @S1: #002952;
-@S2: #106ECC;
-@S3: #148AFF;
-@S4: #5CADFF;
-@S5: #85C2FF;
-@S6: #CCE6FF;
-@M1: #0E1114;
-@M2: #33383D;
-@M3: #565E66;
-@M4: #83898F;
-@M5: #BFC3C7;
-@M6: #E6E8EB;
-@M7: #F0F2F5;
-@M8: #FAFBFC;
-@M9: #FFFFFF;
+@S2: #106ecc;
+@S3: #148aff;
+@S4: #5cadff;
+@S5: #85c2ff;
+@S6: #cce6ff;
+@M1: #0e1114;
+@M2: #33383d;
+@M3: #565e66;
+@M4: #83898f;
+@M5: #bfc3c7;
+@M6: #e6e8eb;
+@M7: #f0f2f5;
+@M8: #fafbfc;
+@M9: #ffffff;
 @M10: #000000;
-@D1: #FAC105;
-@D2: #FFAB24;
+@D1: #fac105;
+@D2: #ffab24;
 @D3: #ff6952;
-@D4: #FF3C73;
-@D5: #EE62D5;
-@D6: #8475FF;
-@D7: #4F73FF;
-@D8: #2E9CFF;
-@D9: #0CC0C9;
-@D10: #0CC991;
-@D11: #83D615;
-@D1-1: #FEF8E5;
-@D2-1: #FFF6E9;
-@D3-1: #FFF0ED;
-@D4-1: #FFEBF1;
-@D5-1: #FDEFFA;
-@D6-1: #F2F1FF;
-@D7-1: #EDF1FF;
-@D8-1: #EAF5FF;
-@D9-1: #E6F8F9;
-@D10-1: #E6F9F3;
-@D11-1: #F2FAE7;
-@F-blue: #29B8FF;
-@F-green: #46CF84;
-@F-yellow: #FFA42E;
-@F-red: #FF475A;
+@D4: #ff3c73;
+@D5: #ee62d5;
+@D6: #8475ff;
+@D7: #4f73ff;
+@D8: #2e9cff;
+@D9: #0cc0c9;
+@D10: #0cc991;
+@D11: #83d615;
+@D1-1: #fef8e5;
+@D2-1: #fff6e9;
+@D3-1: #fff0ed;
+@D4-1: #ffebf1;
+@D5-1: #fdeffa;
+@D6-1: #f2f1ff;
+@D7-1: #edf1ff;
+@D8-1: #eaf5ff;
+@D9-1: #e6f8f9;
+@D10-1: #e6f9f3;
+@D11-1: #f2fae7;
+@F-blue: #29b8ff;
+@F-green: #46cf84;
+@F-yellow: #ffa42e;
+@F-red: #ff475a;
 
 // 间距
 @Sp-1: 2px;
@@ -58,11 +58,11 @@
 @Sp-11: 40px;
 
 // 阴影
-@Sh-1: 0 0 8px 0 rgba(0,0,0,0.05);
-@Sh-2: 0 2px 8px 0 rgba(0,0,0,0.10);
-@Sh-3: 0 0 12px 0 rgba(0,0,0,0.10);
-@Sh-4: -4px 0 20px 0 rgba(0,0,0,0.10);
-@Sh-5:  0 2px 20px 0 rgba(0,0,0,0.30);
+@Sh-1: 0 0 8px 0 rgba(0, 0, 0, 0.05);
+@Sh-2: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+@Sh-3: 0 0 12px 0 rgba(0, 0, 0, 0.1);
+@Sh-4: -4px 0 20px 0 rgba(0, 0, 0, 0.1);
+@Sh-5: 0 2px 20px 0 rgba(0, 0, 0, 0.3);
 
 // 圆角
 @Ra-1: 2px;
