fix: add className and style props

--- a/src/components/image/style/index.less
+++ b/src/components/image/style/index.less
@@ -62,8 +62,8 @@
       }
 
       &-original {
-        max-width: auto;
-        max-height: auto;
+        max-width: max-content;
+        max-height: max-content;
       }
     }
 
